# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: cli.py  diff.py  engine.py  gendiff.py  generate_diff.py  parser.py
gendiff/formatters/: choose_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_build_diff.py  test_diff.py  test_gendiff.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py  tools.py
tests/fixtures/: diff_to_change.json  structured_diff.json
