[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["babomdi <dasha.ryzhikova@bk.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10.12"
pytest-cov = "^4.1.0"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.coverage.run]
omit = ["*/__init__.py"]
